chore: added button and fixed card overflow

--- a/css/style.css
+++ b/css/style.css
@@ -108,6 +108,9 @@ body {
 .u-margin-bottom-small {
   margin-bottom: 1.5rem; }
 
+.u-margin-top-big {
+  margin-top: 8rem; }
+
 .section-about {
   background-color: #f7f7f7;
   padding: 25rem 0;
@@ -230,6 +233,11 @@ body {
     color: #777; }
     .btn--white::after {
       background-color: #fff; }
+  .btn--green {
+    background-color: #7ed56f;
+    color: #fff; }
+    .btn--green::after {
+      background-color: #7ed56f; }
   .btn::after {
     content: "";
     display: inline-block;
@@ -289,7 +297,8 @@ body {
     display: block;
     backface-visibility: hidden;
     border-radius: 3px;
-    box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15); }
+    box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15);
+    overflow: hidden; }
     .card__side--picture {
       width: 100%;
       height: 23rem;
