--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -25,6 +25,7 @@
     backface-visibility: hidden;
     border-radius: 3px;
     box-shadow: 0 1.5rem 4rem rgba($color-black, 0.15);
+    overflow: hidden;
 
     &--picture {
       width: 100%;
